test/sema/negative/incorrect_param_types.impala
fn f(i: for, int, k) -> int {
    i + j;
}
